Add gz plain text choise, add exceptions

--- a/PythonProfessional-01/config.cfg
+++ b/PythonProfessional-01/config.cfg
@@ -1,3 +1,3 @@
 [DEFAULT]
-LogDirectory = /var/log/nginx/
+LogDirectory = C:\Common_Folder\Programming\PythonProjects\OTUS\Python Professional\01-Advanced basics\01_advanced_basics\homework\logs
 ReportFile = report.html
