--- a/PythonProfessional-01/config.cfg
+++ b/PythonProfessional-01/config.cfg
@@ -1,3 +1,4 @@
 [DEFAULT]
 LogDirectory = C:\Common_Folder\Programming\PythonProjects\OTUS\Python Professional\01-Advanced basics\01_advanced_basics\homework\logs
-ReportFile = report.html
+ReportFile = C:\Common_Folder\Programming\PythonProjects\OTUS_homework\PythonProfessional-01\src
+ProcessedFilesStorage = processed.txt
