--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -39,4 +39,5 @@ jobs:
     - name: Test with unittest
       run: |
         #python -m unittest tests.test_log_analyzer.TestLogAnalyzer
+        echo $(pwd)
         python -m unittest discover tests
