--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -40,5 +40,6 @@ jobs:
       run: |
         echo $(pwd)
         cd PythonProfessional-01
+        PYTHONPATH=./src
         python -m unittest tests.test_log_analyzer.TestLogAnalyzer
         #python -m unittest discover tests
