--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
+        pip install flake8 pytest black
         #if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         pip install tqdm==4.62.3
     - name: Lint with flake8
@@ -37,6 +37,9 @@ jobs:
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    - name: Format with black
+      run: |
+        black . --line-length 127
     - name: Test with unittest
       run: |
         echo $(pwd)
